--- a/README
+++ b/README
@@ -1,44 +1,10 @@
-TAEB 0.01
+TAEB is a modular NetHack bot + framework.
 
-TAEB is
+All of its NetHack-playing logic is in lib/TAEB/AI/. The framework is the rest
+of lib/. For example, lib/TAEB/Knowledge/ includes data about NetHack's
+monsters, items, etc.
 
-MAJOR CHANGES
-    0.01: first version
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-    perl Makefile.PL
-    make
-    make test
-    make install
-
-SUPPORT AND DOCUMENTATION
-
-After installing, you can find documentation for this module with the perldoc
-command.
-
-    perldoc TAEB
-
-You can also look for information at:
-
-    Search CPAN
-        http://search.cpan.org/dist/TAEB
-
-    CPAN Request Tracker:
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=TAEB
-
-    AnnoCPAN, annotated CPAN documentation:
-        http://annocpan.org/dist/TAEB
-
-    CPAN Ratings:
-        http://cpanratings.perl.org/d/TAEB
-
-COPYRIGHT AND LICENSE
-
-Copyright (C) 2007 Shawn M Moore
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
+AI is currently broken into two parts, Behaviors and Personalities. Behaviors
+are small objects that are slightly higher level individual actions, such as
+"FixHunger". Personalities make use of Behaviors and ultimately decide which
+one is run next.
