Add NEWTASKS, a list of tasks for new developers (currently only new Actions)

--- a/README
+++ b/README
@@ -44,3 +44,4 @@ Be sure to include the three dashes.
 
 Then you should be ready to run him! Type ./bin/taeb and cross your fingers.
 
+If you're interested in developing TAEB, see the NEWTASKS file.
