--- a/README
+++ b/README
@@ -53,4 +53,9 @@ Be sure to include the three dashes.
 
 Then you should be ready to run him! Type perl bin/taeb and cross your fingers.
 
+If you want to run TAEB on your machine, you need to have nethack installed.
+No patches are required. Due to limitations of IO::Pty, your terminal must be
+80x24. (We're working on a fix for this)
+
 If you're interested in developing TAEB, see the NEWTASKS file.
+
